# bg3-translate

./: .gitignore  README.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  formats.rs  glossary.rs  lib.rs  main.rs  pak.rs  translation.rs  types.rs
src-tauri/tests/: e2e_flow.rs  event_serialization.rs  glossary_match.rs
src/components/: AppTopBar.tsx  FileDropZone.tsx  FileTree.tsx  GlossaryPanel.tsx  SettingsPanel.tsx  TranslationTable.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dropdown-menu.tsx  number-input.tsx  progress.tsx  textarea.tsx
src/lib/: tauri.ts  types.ts  utils.ts
src/store/: app-store.ts
tools/: finalize_icon.py
