[package]
name = "bg3-translate"
version = "0.1.0"
description = "博德之门3 MOD 汉化工具"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "bg3_translate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PAK 处理（阶段0已验证通过）
bg3rustpaklib = "0.1"

# LLM 翻译
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }

# XML 解析
quick-xml = "0.37"

# 错误处理
thiserror = "2"
anyhow = "1"

# 日志
log = "0.4"

[dev-dependencies]
bg3rustpaklib = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
